--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,19 @@
+* {
+  margin: 0;
+  padding: 0;
+}
 body{
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-top: 4rem;
+}
+.book{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+}
+.delete{
+  color: red;
 }
